--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.16.0"
+    "babel-preset-stage-2": "^6.16.0",
+    "prettier": "^1.3.1"
   },
   "dependencies": {
     "uuid": "^2.0.3"
