--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/sprmn/react-firebase-file-uploader#readme",
   "peerDependencies": {
-    "firebase": "^3.5.2",
-    "react": "^15.3.2"
+    "firebase": "^3.5.2 || ^4.0.0",
+    "react": "^15.3.2 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -42,6 +42,6 @@
     "prettier": "^1.3.1"
   },
   "dependencies": {
-    "uuid": "^2.0.3"
+    "uuid": "^3.2.1"
   }
 }
