--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-firebase-file-uploader",
-  "version": "2.4.1",
+  "version": "2.4.3",
   "description": "A file uploader for react that uploads files to your firebase storage",
   "main": "lib/index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/sprmn/react-firebase-file-uploader#readme",
   "peerDependencies": {
-    "firebase": "^3.5.2 || ^4.0.0",
+    "firebase": "^3.5.2 || ^4.0.0 || ^5.0.0",
     "react": "^15.3.2 || ^16.0.0"
   },
   "devDependencies": {
